opam-version: "1.2"
name: "dot_gtk"
version: "1.0"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Maxence Guesdon <Maxence.Guesdon@inria.fr>"
license: "LGPL-3.0-only"
homepage: "https://github.com/ghuysmans/ocamldot/"
bug-reports: "https://github.com/ghuysmans/ocamldot/issues"
dev-repo: "git://github.com/ghuysmans/ocamldot/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "Reading and writing Graphviz files in OCaml"
depends: [
  "dune"
  "dot"
  "lablgtk"
]
